Current :
OK - mod: one section per to module in latex output + improve latex output
OK - mod: odoc_latex: use buffers instead of string concatenation
OK - add: new ocamldoc man page, thanks to Samuel Mimram
OK - fix: useless parenthesis around agruments of arguments of a type constructor in
     type definitions, and aournd arguments of exceptions in exception definitions.
OK - fix: blank lines in verbatim, latex, code pre, code and ele ref modes
     are now accepted
OK - fix: html generator: included module names were displayed with their simple
     name rather than their fully qualified name
OK - fix: use a formatter from a buffer rather Format.str_formatter in
     Odoc_mist.sting_of_module_type, to avoid too much blanks
OK - new module odoc_print, will work when Format.pp_print_flush is fixed
OK - odoc_html: use buffers instead of string concatenation
OK - odoc_man: use buffers instead of string concatenation
OK - odoc_cross.ml: use hash tables modified on the fly to resolve 
    (module | module type | exception) name aliases
OK - odoc_html: replace some calls to Str. by specific functions on strings
OK - odoc_cross.ml: use a Map to associate a complete name to
    the known elements with this name, instead of searching each time
    through the whole list of modules -> a gain of more than 90% in speed
    for cross-referecing (Odoc_cross.associate)
OK - fix: Odoc_name.cut printed a '(' instead of a '.' OK - add: new option -customdir
OK - add: new option -i (to add a path to the directory where 
     to look for custom generators)
OK - add: add odoc_config.ml{,i}
OK - add: keep_code in Odoc_info.Args interface
OK - add: m_code_intf and m_code fields for modules, fit when the
   Odoc_args.keep_code option is set, and fit for all modules, not
   only toplevel ones
OK - fix: bug preventing to get the code in a .mli
OK - fix: missing spaces after carriage return in types (Odoc_misc.string_of_type_expr)
OK - fixes: some bugs in the text parser 