@@ -1,4 +1,6 @@
 Current :
+OK - fix: when generating separated files in latex, generate them in
+     the same directory than the main file, (the one specified by -o)
 OK - mod: one section per to module in latex output + improve latex output
 OK - mod: odoc_latex: use buffers instead of string concatenation
 OK - add: new ocamldoc man page, thanks to Samuel Mimram
